--- a/_posts/2021-10-7-test.md
+++ b/_posts/2021-10-7-test.md
@@ -2,8 +2,8 @@
 layout: post
 title: Test post
 subtitle: Test subtitle
-gh-repo: carlos-hernani
-gh-badge: [follow] #star, fork, 
+#gh-repo: carlos-hernani
+#gh-badge: [follow] #star, fork, 
 tags: [test]
 comments: true
 ---
