testing float image left

--- a/_posts/2021-10-7-test.md
+++ b/_posts/2021-10-7-test.md
@@ -8,3 +8,5 @@ comments: true
 
 
 Some text. <s>let's see</s> or ~~let's see~~. Edited a day later, will it work?
+
+![test_image](/assets/img/avatar-icon.png){: .img-left}
